--- a/example-app/public/css/style.css
+++ b/example-app/public/css/style.css
@@ -1,13 +1,53 @@
+/* media */
+
+
 /* header */
 body{
     margin: 0;
     padding: 0;
 }
 .header-nav{
+    z-index: 5;
     color: white;
     text-decoration: none;
 }
+.header-burger-btn{
+    display: none;
+    position: relative;
+    height: 40px;
+    width: 40px;
+    border: none;
+    background-color: rgb(236, 34, 34);
+}
+.header-burger-btn span{
+    transition: .3s;
+    position: absolute;
+    width: 30px;
+    height: 3px;
+    background-color: white;
+    left: 5px;
+}
+.header-burger-btn span:nth-child(1){
+    transform: translateY(-10px)
+}
+.header-burger-btn span:nth-child(3){
+    transform: translateY(10px)
+}
+
+.header.open .header-burger-btn span:nth-child(1){
+    transform: translateY(0) rotate(45deg);
+}
+.header.open .header-burger-btn span:nth-child(2){
+    opacity: 0;
+}
+.header.open .header-burger-btn span:nth-child(3){
+    transform: translateY(0) rotate(-45deg);
+}
+
+
 .nav-item{
+    background-color: rgb(236, 34, 34);
+    border: none;
     color: white;
     text-decoration: none;
     margin: 0 15px;
@@ -51,6 +91,10 @@ body{
  border: 4px solid rgb(236, 34, 34);
  color: rgb(236, 34, 34);
 }
+.form-control:focus{
+    box-shadow: 0 0 0 0.25rem rgb(245 84 84 / 52%);
+}
+
 .title-block{
     background: url(/images/bg.jpg);
     height: 500px;
@@ -61,10 +105,15 @@ body{
     font-weight: bold;
     color: rgb(255, 255, 255);
 }
+.input{
+    display: flex;
+    border-radius: 10px;
+    border: 2px solid black;
+}
 .main-title-text{
     font-size: 4em;
     font-weight: bold;
-    color: rgb(236, 34, 34);
+    color: #ec2222;
     display: flex;
 }
 .title-text-slim{
@@ -84,10 +133,23 @@ body{
 }
 .main-maps{
     margin-top: 50px;
+    height: 620px;
+    width: 550px;
 }
 
-
-
+.card-popular{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.card-popular-list:after{
+    display: table;
+    content: "";
+    clear: both;
+}
+.popular{
+    float: left;
+}
 .main-form{
     display: flex;
     margin: 0 30px;
@@ -96,19 +158,35 @@ body{
 .main-form-sort,.main-form-type{
     margin-top: 15px;
 }
+.main-form-type{
+    display: flex;
+    flex-direction: column;
+}
 .main-sort{
     display: flex;
 }
 .main-title{
-    margin: 0 30px;
     display: flex;
     justify-content: space-between;
 }
 .main-result{
-    margin: 10px 9px;
+    margin: 10px 30px;
 }
 .card-block{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     margin-top: 15px;
+
+}
+.card-block::after{
+    display: table;
+    content: "";
+    clear: both;
+}
+.card{
+    float: left;
+    margin: 0 20px;
 }
 /*  */
 .btn-search{
@@ -131,10 +209,10 @@ body{
     height: 15px;
 }
 
-.card-block{
+/* .card-block{
     display: flex;
     flex-direction: column;
-}
+} */
 
 /*  */
 .intermediate-nav{
@@ -142,27 +220,88 @@ body{
     height: 70px;
     background-color: rgb(236, 34, 34);
     display: flex;
-    justify-content: center;
     align-items: center;
 }
 
 .intermediate-title{
+    margin-left: 30px;
+    font-size: 2.5rem;
     color: white;
-    padding: 15px 10px;
-    border: 3px solid white;
-    border-radius: 20px;
     font-weight: bold;
 }
 
 .intermediate-nav{
     
 }
-
+/* 
 .card-popular-list{
     display: flex;
     justify-content: center;
-}
+} */
 
 .popular{
-    margin: 10px 58px;
+    margin: 10px 30px;
 }
+.card{
+    margin-top: 20px;
+}
+/* .card-body{
+    display: flex;
+} */
+
+.card-title-block{
+    display: flex;
+    flex-direction: column;
+    margin-left: 10px
+}
+.go-img{
+    width: 20px;
+    height: 30px;
+}
+.go{
+    border-radius: 50%;
+    background-color: white;
+    border: 1px solid rgb(236, 34, 34);
+    position: fixed;
+    right: 20px;
+    top: 90%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    padding: 10px 15px;
+    color: rgb(236, 34, 34);
+    transition: .3s;
+    display: none;
+
+}
+.go-show{
+    display: block;
+}
+.go:hover{
+    opacity: .7;
+    color: rgb(236, 34, 34);
+}
+/* media */
+@media  (max-width: 992px){
+    .header-burger-btn{
+        z-index: 10;
+        display: block;
+    }
+    .header-nav{
+        width: 350px;
+        position: absolute;
+        left: -350px;
+        top: 0;
+        background-color: rgb(236, 34, 34);
+        padding: 50px 20px 20px 20px;
+        transition: .4s
+    }
+    .nav-item{
+        margin: 20px 18px;
+        font-size: 18px;
+        display: block;
+    }
+    .header.open .header-nav{ 
+        transform: translateX(100%);
+    }
+    }
+
